fix content overflow

--- a/src/less/main.less
+++ b/src/less/main.less
@@ -138,6 +138,10 @@ body > .container {
     margin-top: 0;
     margin-bottom: 0;
     padding: 10px 0;
+    &.row {
+      margin-left: 0;
+      margin-right: 0;
+    }
     [class*="col-"] {
       padding-left: 10px;
       padding-right: 10px;
